--- a/app/views/freights/guest_user_sign_up.html.erb
+++ b/app/views/freights/guest_user_sign_up.html.erb
@@ -16,6 +16,10 @@
       <%= form_for(resource, as: resource_name, url: session_path(resource_name), html: { remote: :true}) do |f| %>
           <div class="row">
             <div class="col-xs-12">
+              <div class="users-login-form">
+                <div class="alert alert-danger text-center alert-dismissable failure-messages" style="display:none">
+                </div>
+              </div>
               <div class="form-group">
               <%= f.hidden_field :login_from_guest, :value => true %>
               <%= f.label :email %>
