Fix : Uncaught SyntaxError: Unexpected token )

--- a/app/views/bookings/_result_content.html.erb
+++ b/app/views/bookings/_result_content.html.erb
@@ -42,8 +42,8 @@
   <div class="row">
     <div class="col-xs-12">
       <div class="form-group text-right">
-        <%= link_to 'Book Now', 'javascript:void()', onclick: "check_cart('/address_books/add_supplier_consignee')", class: "btn btn-primary",  style: "margin-right:10px;" %>
-        <%= link_to 'javascript:void()', class: "btn btn-default pull-right", onclick: "check_cart('/bookings/booking_summary')" do %>
+        <%= link_to 'Book Now', 'javascript:void(0)', onclick: "check_cart('/address_books/add_supplier_consignee')", class: "btn btn-primary",  style: "margin-right:10px;" %>
+        <%= link_to 'javascript:void(0)', class: "btn btn-default pull-right", onclick: "check_cart('/bookings/booking_summary')" do %>
           View Summary
           <i class="fa fa-angle-double-right"></i>  
         <% end %>
