--- a/app/views/bookings/get_quote.html.erb
+++ b/app/views/bookings/get_quote.html.erb
@@ -26,35 +26,35 @@
             <li class="col-xs-1">
               <div class="form-group">
                 <label>L</label>
-                <%=text_field_tag "search_length", @draft_booking.length, {class: "form-control"}%>
+                <%=text_field_tag "filter_length", @draft_booking.length, {class: "form-control"}%>
               </div>
             </li>
 
             <li class="col-xs-1">
               <div class="form-group">
                 <label>W</label>
-                <%=text_field_tag "search_width", @draft_booking.width, {class: "form-control"}%>
+                <%=text_field_tag "filter_width", @draft_booking.width, {class: "form-control"}%>
               </div>
             </li>
 
             <li class="col-xs-1">
               <div class="form-group">
                 <label>H</label>
-                <%=text_field_tag "search_height", @draft_booking.height, {class: "form-control"}%>
+                <%=text_field_tag "filter_height", @draft_booking.height, {class: "form-control"}%>
               </div>
             </li>
 
             <li class="col-xs-1">
               <div class="form-group">
                 <label>Wt(kg)</label>
-                <%=text_field_tag "search_weight", @draft_booking.weight, {class: "form-control"}%>
+                <%=text_field_tag "filter_weight", @draft_booking.weight, {class: "form-control"}%>
               </div>
             </li>
             <li class="col-xs-2">
               <div class="form-group">
                 <label>Date</label>
-                <div class="input-group date" data-provide="datepicker">
-                <%= text_field_tag "search_date", @draft_booking.pick_up_date, class: "form-control",placeholder: "DD/MM/YYYY",'data-date-format'=> "dd/mm/yyyy" %>
+                <div class="input-group">
+                <%= text_field_tag "filter_date", @draft_booking.pick_up_date.strftime("%d/%m/%Y"), class: "form-control",placeholder: "DD/MM/YYYY"%>
                 <span class="input-group-addon">
                   <i class="fa fa-calendar"></i>
                 </span>
