--- a/app/views/user_information/new.html.erb
+++ b/app/views/user_information/new.html.erb
@@ -5,7 +5,7 @@
         <div class="col-xs-12">
           <div class="row">
             <div class="col-xs-10 col-xs-offset-1">
-              <h3 class="page-title text-center"></i> Buyer Varification-Company Information</h3>
+              <h3 class="page-title text-center"></i> Buyer Verification-Company Information</h3>
             </div>
           </div>
           <div class="text-danger">
