--- a/app/views/booking_mailer/document_pending_booking.html.erb
+++ b/app/views/booking_mailer/document_pending_booking.html.erb
@@ -1,7 +1,7 @@
 Booking is pending
 Booking Details
 <%= (@bookings || []).each do |booking|%>
-  <%= link_to booking.source.port + booking.destination.port , get_quote_booking_path(booking.id)%>
+  <%= link_to booking.source.port_name + booking.destination.port_name , get_quote_booking_path(booking.id)%>
 <% end %>
 
 Thanks,
