--- a/app/views/booking_mailer/buyer_booking_cancellation.text.erb
+++ b/app/views/booking_mailer/buyer_booking_cancellation.text.erb
@@ -1,7 +1,7 @@
 Booking is cancelled
 Booking Details
-from: <%=@booking.source.full_address%>
-to: <%=@booking.destination.full_address%>
+from: <%=@booking.source.port_name%>
+to: <%=@booking.destination.port_name%>
 
 Thanks,
 Blue Compass Team.
