--- a/app/views/bookings/confirmed.html.erb
+++ b/app/views/bookings/confirmed.html.erb
@@ -68,8 +68,8 @@
                           <%bookings.each do |booking|%>                          
                             <tr>
                               <td> <%=booking.id %></td>
-                              <td> <%=booking.source.full_address  %></td>
-                              <td> <%=booking.destination.full_address  %></td>
+                              <td> <%=booking.source.port_name  %></td>
+                              <td> <%=booking.destination.port_name  %></td>
                               <td> <%=booking.pick_up_date %></td>
                               <td> <%=booking.length %></td>
                               <td> <%=booking.width %></td>
