--- a/app/views/booking_mailer/buyer_booking_rejection.html.erb
+++ b/app/views/booking_mailer/buyer_booking_rejection.html.erb
@@ -1,7 +1,7 @@
 <div>Booking is Rejected</div>
 <div>Booking Details </div>
-<div>from: <%=@booking.source.full_address%></div>
-<div>to: <%=@booking.destination.full_address%></div>
+<div>from: <%=@booking.source.port_name%></div>
+<div>to: <%=@booking.destination.port_name%></div>
 <div>Reason: <%=@booking.remark%></div>
 
 <div>
