--- a/app/views/booking_mailer/seller_booking_rejection.text.erb
+++ b/app/views/booking_mailer/seller_booking_rejection.text.erb
@@ -1,7 +1,7 @@
 Booking is Rejected
 Booking Details
-from: <%=@booking.source.full_address%>
-to: <%=@booking.destination.full_address%>
+from: <%=@booking.source.port_name%>
+to: <%=@booking.destination.port_name%>
 Reason: <%=@booking.remark%>
 
 Thanks,
