--- a/app/views/bookings/negotiation_round_one.html.erb
+++ b/app/views/bookings/negotiation_round_one.html.erb
@@ -32,8 +32,8 @@
                       <% @bookings.each  do |booking| %>
                           <tr id='seller_booking_<%=booking.id%>' >
                             <td> <%=booking.id  %></td>
-                            <td> <%=booking.source.full_address  %></td>
-                            <td> <%=booking.destination.full_address  %></td>
+                            <td> <%=booking.source.port_name  %></td>
+                            <td> <%=booking.destination.port_name  %></td>
                             <td> <%=booking.pick_up_date %></td>
                             <td> <%=booking.weight %></td>
                             <td> Spot Rate</td>
