--- a/app/views/freights/search.html.erb
+++ b/app/views/freights/search.html.erb
@@ -1,8 +1,8 @@
 <table style="width:100%">
   <% @freight_rates.each do |freight_rate| %>
     <tr>
-      <td><%= freight_rate.source.full_address %></td>
-      <td><%= freight_rate.destination.full_address%></td>
+      <td><%= freight_rate.source.port_name %></td>
+      <td><%= freight_rate.destination.port_name%></td>
       <td><%= freight_rate.min_weight%></td>
       <td><%= freight_rate.max_weight %></td>
     </tr>
